# old_vcpu

./: .gitignore  Cargo.toml  Makefile.toml  README.md
bau/: Cargo.toml
bau/src/: bau.rs  error.rs  instruction.rs  lib.rs
bau/src/bau/: parser.rs  scanner.rs  token.rs
examples/: simple.rs
sandbox/: Cargo.toml
sandbox/res/asm/: assembly.bau  f.asm  natural.bau
sandbox/src/: main.rs
src/: cpu.rs  error.rs  lib.rs  log.rs  memory.rs  time.rs
src/cpu/: instruction.rs  status.rs
src/cpu/instruction/: jmp.rs  lda.rs  nop.rs
vcpu/: Cargo.toml
vcpu/src/: cpu.rs  error.rs  lib.rs  log.rs  memory.rs  time.rs
vcpu/src/cpu/: instruction.rs
vcpu/src/cpu/instruction/: jmp.rs  jsr.rs  lda.rs  nop.rs  sta.rs
vcpu/src/memory/: disk.rs  mmu.rs  ram.rs  rom.rs
