[package]
name = "vcpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"

tracing  = "0.1.37"
tracing-subscriber = "0.3.17"
strum = { version = "0.25.0", features = ["derive"] }

thiserror = "1.0.44"