[package]
name = "bau"
version = "0.0.1"
edition = "2021"
authors = ["Gabriel Lugo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
strum = { version = "0.25.0", features = ["derive"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.44"
